--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
           <nav>
               <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="portfolio.html"</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
               </ul>
           </nav>
           
           <main>
               <div class="sidebar"> 
-                  <img href="Cartoon job finished.ai">
+                  <img src="https://drive.google.com/drive/u/1/my-drive">
               </div>
               
               <div class="content">
